# aws-lambda-rust

./: Cargo.toml  package-lock.json  package.json  serverless.yml
.github/workflows/: main.yml
api/create/: Cargo.toml
api/create/src/: main.rs
api/delete/: Cargo.toml
api/delete/src/: main.rs
api/read/: Cargo.toml
api/read/src/: main.rs
api/update/: Cargo.toml
api/update/src/: main.rs
